--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,6 +5,8 @@
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.2);
   width: 100%;
+  height: 160px;
+  gap: 8px;
   text-align: center;
   font-size: x-small;
 }
