--- a/src/components/Forecast/FutureForecast/FutureForecast.css
+++ b/src/components/Forecast/FutureForecast/FutureForecast.css
@@ -1,6 +1,6 @@
 .future-forecast-container {
   width: 100%;
-  max-width: 600px;
+  max-width: 500px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
