--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,15 +1,7 @@
 .header-container {
-  position: fixed;
-  top: 0vh;
   background-color: rgba(255, 255, 255, 0.5);
   width: 100%;
-  height: 40px;
-  /* padding: 0px 50px;
+  height: auto;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
-  border-radius: 15px;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-  position: relative; */
 }
